--- a/test.html
+++ b/test.html
@@ -5,9 +5,12 @@
   测试代码2 —— —— 远程修改
 </h2>
 <h3>
-  本地修改
-  远程整行修改
+  本地修改456
+  远程整行修改456
 </h3>
 <h3>
   测试代码5 ——来自另一端
 </h3>
+<p>
+  本地增加代码
+</p>
